--- a/index.html
+++ b/index.html
@@ -4,8 +4,15 @@
     <meta charset="UTF-8">
     <title>Military Ranks</title>
     <link rel="stylesheet" href="style.css">
-</head>
-<body>
+
+    </head>
+    
+    <style>
+     #output {
+        display: none;}
+</style>
+
+    <body>
 <form>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="code.js"></script>
